# starship_arena

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: main.rs  states.rs
src/arena/: mod.rs
src/assets/: ai_sprite_handles.rs  arena_sprite_handles.rs  mod.rs  player_sprite_handles.rs  projectile_sprite_handles.rs
src/camera/: mod.rs
src/debug/: mod.rs
src/log/: mod.rs
src/mouse/: mod.rs
src/physics/: mod.rs  physics_object_2d.rs  physics_object_bundle.rs
src/player/: mod.rs
src/ship/: mod.rs
